# ergothic

./: Cargo.toml
ergothic/: Cargo.toml
ergothic/examples/mean_powers_of_x/: main.rs
ergothic/examples/quantum_oscillator/: main.rs
ergothic/src/: export.rs  lib.rs  measure.rs  simulation.rs  startup.rs
examples/mean_powers_of_x/: main.rs
examples/quantum_oscillator/: main.rs
src/: accumulate.rs  export.rs  measure.rs  simulation.rs  startup.rs
