[package]
name = "ergothic"
version = "0.1.4"
authors = ["Cap. Hindsight <hindsight@yandex.ru>"]
description = "Rust library for setting up and running distributed Monte-Carlo statistical simulations. Designed primarily for lattice QCD."
homepage = "https://github.com/caphindsight/ergothic"
readme = "../README.md"
license = "WTFPL"
edition = '2018'

[dependencies]
argparse = "0.2.1"
log = "0.4.3"
mongodb = { version= "1.2.2", default-features= false, features= ['sync'] }
prettytable-rs = "0.8.0"
rand = "0.8.4"
serde = "1.0.69"
serde_derive = "1.0.69"
simple_logger = "1.12.1"
structopt = "0.3.22"
